force-app/main/default/objects/cdcpc__RD_Girdle_Part_Number__c/fields/cdcpc__PressLL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PressLL__c</fullName>
    <label>PressLL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>