force-app/main/default/objects/cdcpc__RD_Girdle_Part_Number__c/fields/cdcpc__Qty_Per_Assembly__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Qty_Per_Assembly__c</fullName>
    <label>Qty Per Assembly</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>