force-app/main/default/objects/cdcpc__RD_Girdle_Part_Number__c/fields/cdcpc__Scrap_Factor__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Scrap_Factor__c</fullName>
    <label>Scrap Factor%</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>