force-app/main/default/objects/cdcpc__RD_Girdle_Part_Number__c/fields/cdcpc__ThckCode__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ThckCode__c</fullName>
    <label>ThckCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>