force-app/main/default/objects/cdcpc__RD_Girdle_Part_Number__c/fields/cdcpc__Thickness__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Thickness__c</fullName>
    <label>Thickness</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>