force-app/main/default/objects/cdcpc__RD_Girdle_Part_Number__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__STC__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__MCGD__c</columns>
    <columns>cdcpc__DSCVAR__c</columns>
    <columns>cdcpc__OptionCode__c</columns>
    <columns>cdcpc__PressLL__c</columns>
    <columns>cdcpc__PressUL__c</columns>
    <columns>cdcpc__SourceCode__c</columns>
    <columns>cdcpc__TestingCode__c</columns>
    <columns>cdcpc__ThckCode__c</columns>
    <columns>cdcpc__GirdlePartNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__PTC__c</field>
        <operation>equals</operation>
        <value>CAL</value>
    </filters>
    <filters>
        <field>cdcpc__SZC__c</field>
        <operation>equals</operation>
        <value>0800</value>
    </filters>
    <filters>
        <field>cdcpc__MCGD__c</field>
        <operation>equals</operation>
        <value>070</value>
    </filters>
    <filters>
        <field>cdcpc__SourceCode__c</field>
        <operation>equals</operation>
        <value>00</value>
    </filters>
    <filters>
        <field>cdcpc__PressLL__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>cdcpc__STC__c</field>
        <operation>equals</operation>
        <value>FS</value>
    </filters>
    <label>All</label>
</ListView>